# tokenizer-app

./: README.md  package.json
public/: index.html  manifest.json
server/: pyproject.toml
server/src/tokenizer_service/: server.py
src/: App.css  App.js
tokenizer-service/: pyproject.toml
tokenizer-service/tokenizer_service/: server.py
