[tool.poetry]
name = "tokenizer-service"
version = "0.1.0"
description = ""
authors = ["Kailash Karthik <kailashkarthik9@gmail.com>"]
readme = "README.md"
packages = [{include = "tokenizer_service"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
transformers = "^4.41.2"
black = "^24.4.2"
mypy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
